force-app/main/default/objects/Contract_Intake__c/Contract_Intake__c.object-meta.xml
<CustomObject>
    <description>Stores extracted terms and automated risk analysis for vendor contracts. Populated via Screen Flow + Prompt Template; includes commercial/legal fields, computed risk score/class, justification, and source excerpts for auditability.</description>
    <label>Contract Intake</label>
    <nameField>
        <displayFormat>CI-{MM}-{DD}-{YYYY}-{0000}</displayFormat>
        <label>Contract Intake</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>