force-app/main/default/objects/Contract_Intake__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Intakes</relationshipLabel>
    <relationshipName>Contract_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>