force-app/main/default/objects/Contract_Intake__c/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>