force-app/main/default/objects/Contract_Intake__c/fields/Auto_Renew_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Period_Months__c</fullName>
    <label>Auto Renew Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>