force-app/main/default/objects/Contract_Intake__c/fields/Data_Processing_DPA_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Processing_DPA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Processing (DPA) Required?</label>
    <type>Checkbox</type>
</CustomField>