force-app/main/default/objects/Contract_Intake__c/fields/Indemnity_Present__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indemnity Present</label>
    <type>Checkbox</type>
</CustomField>