force-app/main/default/objects/Contract_Intake__c/fields/Liability_Cap_Text__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap_Text__c</fullName>
    <label>Liability Cap (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>