force-app/main/default/objects/Contract_Intake__c/fields/Lowest_Confidence_0100__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Confidence_0100__c</fullName>
    <label>Lowest Confidence (0–100)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>