force-app/main/default/objects/Contract_Intake__c/fields/Negotiation_Tips__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Tips__c</fullName>
    <description>Tips for the negotiation derived from Contract Analysis.</description>
    <label>Negotiation Tips</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>