force-app/main/default/objects/Contract_Intake__c/fields/Notice_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Days__c</fullName>
    <label>Notice Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>