force-app/main/default/objects/Contract_Intake__c/fields/Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Days__c</fullName>
    <label>Payment Terms (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>