force-app/main/default/objects/Contract_Intake__c/fields/Recompute_Now__c.field-meta.xml
<CustomField>
    <fullName>Recompute_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recompute Now</label>
    <type>Checkbox</type>
</CustomField>