force-app/main/default/objects/Contract_Intake__c/fields/Risk_Class__c.field-meta.xml
<CustomField>
    <fullName>Risk_Class__c</fullName>
    <label>Risk Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>