force-app/main/default/objects/Contract_Intake__c/fields/Risk_Justification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Justification__c</fullName>
    <label>Risk Justification</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>