force-app/main/default/objects/Contract_Intake__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score (Higher is Better)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>