force-app/main/default/objects/Contract_Intake__c/fields/SecuritySLA_Present__c.field-meta.xml
<CustomField>
    <fullName>SecuritySLA_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security/SLA Present</label>
    <type>Checkbox</type>
</CustomField>