force-app/main/default/objects/Contract_Intake__c/fields/Source_Excerpts__c.field-meta.xml
<CustomField>
    <fullName>Source_Excerpts__c</fullName>
    <label>Source Excerpts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>