force-app/main/default/objects/Contract_Intake__c/fields/Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Termination_for_Convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination for Convenience</label>
    <type>Checkbox</type>
</CustomField>