force-app/main/default/objects/Contract_Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Payment_Terms_Days__c</columns>
    <columns>Auto_Renew__c</columns>
    <columns>Auto_Renew_Period_Months__c</columns>
    <columns>Notice_Period_Days__c</columns>
    <columns>Termination_for_Convenience__c</columns>
    <columns>Indemnity_Present__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>